<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controller.MenuActivity">

    <Button
        android:id="@+id/btnEditarG"
        android:layout_width="138dp"
        android:layout_height="73dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:background="@color/purple_200"
        android:text="@string/editarg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnEditarM"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarG" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/oqdeseja"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="417dp"
        android:layout_height="82dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">

        <TextView
            android:id="@+id/tituloapp"
            android:layout_width="218dp"
            android:layout_height="57dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCadastrarM"
        android:layout_width="138dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:background="@color/purple_200"
        android:text="@string/cadastrarm"
        app:layout_constraintEnd_toStartOf="@+id/btnCadastrarG"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btnEditarM"
        android:layout_width="138dp"
        android:layout_height="73dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="17dp"
        android:background="@color/purple_200"
        android:text="@string/editarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarM" />

    <Button
        android:id="@+id/btnCadastrarG"
        android:layout_width="138dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:background="@color/purple_200"
        android:text="@string/cadastrarg"
        app:layout_constraintBottom_toTopOf="@+id/btnEditarG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btnListarM"
        android:layout_width="138dp"
        android:layout_height="71dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="15dp"
        android:background="@color/purple_200"
        android:text="@string/listarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarM" />

    <Button
        android:id="@+id/btnListarG"
        android:layout_width="138dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:background="@color/purple_200"
        android:text="@string/listarg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnEditarM"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarG" />

    <Button
        android:id="@+id/Calcular"
        android:layout_width="307dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="160dp"
        android:background="@color/purple_200"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarG"
        app:layout_constraintVertical_bias="0.474" />
</androidx.constraintlayout.widget.ConstraintLayout>