<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controller.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="417dp"
        android:layout_height="82dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">

        <TextView
            android:id="@+id/tituloapp"
            android:layout_width="218dp"
            android:layout_height="57dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="204dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/bemvindo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/button"
        android:layout_width="146dp"
        android:layout_height="92dp"
        android:background="@color/purple_200"
        android:text="@string/entrar_login"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="240dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="146dp"
        android:layout_height="92dp"
        android:background="@color/purple_200"
        android:text="@string/cadastro"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="240dp" />

</androidx.constraintlayout.widget.ConstraintLayout>